[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chain_processor"
version = "0.1.0"
description = "A library for creating and managing chains of function nodes."
readme = "README.md"
authors = [
    { name = "Francesco Lorè", email = "flore9819@gmail.com" },
]
urls = { "Homepage" = "https://github.com/lf-data/chain_processor" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
